initial AS7 tests support