@@ -131,6 +131,47 @@
       </testResource>
     </testResources>
     <plugins>
+       <plugin>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <executions>
+              <!--execution>
+                <id>unpack-shared-tests</id>
+                <phase>generate-sources</phase>
+                <goals>
+                  <goal>unpack</goal>
+                </goals>
+                <configuration>
+                  <artifactItems>
+                    <artifactItem>
+                      <groupId>org.jboss.ws</groupId>
+                      <artifactId>jbossws-shared-testsuite</artifactId>
+                      <type>zip</type>
+                      <overWrite>true</overWrite>
+                      <outputDirectory>src/test</outputDirectory>
+                    </artifactItem>
+                  </artifactItems>
+                </configuration>
+              </execution-->
+              <execution>
+                <id>create-endorsed-dir</id>
+                <phase>generate-sources</phase>
+                <goals>
+                  <goal>copy</goal>
+                </goals>
+                <configuration>
+                  <artifactItems>
+                  <artifactItem>
+                    <groupId>org.jboss.spec.javax.xml.ws</groupId>
+                    <artifactId>jboss-jaxws-api_2.2_spec</artifactId>
+                    <type>jar</type>
+                    <overWrite>true</overWrite>
+                    <outputDirectory>${project.build.directory}/endorsed</outputDirectory>
+                    </artifactItem>
+                  </artifactItems>
+                </configuration>
+              </execution>
+            </executions>
+      </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>build-helper-maven-plugin</artifactId>
@@ -642,6 +683,112 @@
 
                  <!--# Seems MSFT interop. endpoints are down :(-->
                  <exclude>org/jboss/test/ws/jaxws/cxf/interop/wstrust10/**</exclude>
+              </excludes>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+    <!--
+    Name:  jboss700
+    Descr: JBoss-7.0.0 specific options
+    -->
+    <profile>
+      <id>jboss700</id>
+      <properties>
+        <jboss.version>7.0.0.Alpha2-SNAPSHOT</jboss.version>
+        <jbossws.integration.target>jboss700</jbossws.integration.target>
+      </properties>
+      <dependencies>
+        <dependency>
+          <groupId>org.jboss.as</groupId>
+          <artifactId>jboss-as-webservices-tests-integration</artifactId>
+          <version>${jboss.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>javax.mail</groupId>
+          <artifactId>mail</artifactId>
+        </dependency>
+      </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+              <compilerArguments>
+                <endorseddirs>${project.build.directory}/endorsed</endorseddirs>
+              </compilerArguments>
+            </configuration>
+            <executions>
+              <execution>
+                <id>default-testCompile</id>
+                <phase>test-compile</phase>
+                <configuration>
+                  <testExcludes>
+                    <!-- AS7 compilation excludes -->
+                    <exclude>org/jboss/test/ws/jaxrpc/**</exclude>
+                    <exclude>org/jboss/test/ws/jaxws/samples/securityDomain/**</exclude>
+                    <exclude>org/jboss/test/ws/jaxws/jbws944/**</exclude>
+                    <exclude>org/jboss/test/ws/jaxws/samples/webserviceref*/**</exclude>
+                    <exclude>org/jboss/test/ws/jaxws/endpointReference/**</exclude>
+                    <exclude>org/jboss/test/ws/jaxws/jaxbcust/**</exclude>
+                  </testExcludes>
+                </configuration>
+                <goals>
+                  <goal>testCompile</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <argLine>${surefire.jvm.args} ${surefire.jvm.management.args} -Djava.endorsed.dirs=${jboss700.home}/lib/endorsed</argLine>
+              <!-- TODO: replace with maven dependencies -->
+              <additionalClasspathElements>
+                 <!-- Lib below required just for jaxrpc tests; listed here to prevent CXF stack from depending on Native stack -->
+                <additionalClasspathElement>${jboss.home}/common/lib/jbossws-native-core.jar</additionalClasspathElement>
+              </additionalClasspathElements>
+              <excludes>
+                 <!--# UsernameTestCase requires trustore in jboss-web tomcat configuration-->
+                 <exclude>org/jboss/test/ws/jaxws/samples/wssePolicy/UsernameTestCase.*</exclude>
+
+                 <!--# [CXF-1519] Explicitly set the namespace of a WebFault-->
+                 <exclude>org/jboss/test/ws/jaxws/jbws1904/**</exclude>
+
+                 <!--# [CXF-2006] RespectBinding feature and not understood required extensibility elements-->
+                 <exclude>org/jboss/test/ws/jaxws/jbws2449/**</exclude>
+
+                 <!--# [EJBTHREE-1152] service-ref in ejb-jar.xml is ignored-->
+                 <exclude>org/jboss/test/ws/jaxws/samples/serviceref/ServiceRefEJBTestCase.*</exclude>
+
+                 <!--# [JBWS-2561] XOP request not properly inlined-->
+                 <exclude>org/jboss/test/ws/jaxws/samples/xop/doclit/XOPHandlerTestCase.*</exclude>
+
+                 <!--# [JBWS-2480] Soap attachments are dropped on server response-->
+                 <exclude>org/jboss/test/ws/jaxws/jbws1283/**</exclude>
+
+                 <!--# [JBWS-2397] Fix jbws1797 testcase-->
+                 <exclude>org/jboss/test/ws/jaxws/jbws1797/**</exclude>
+
+                 <!--# [JBAS-8363] Virtual host issue in JBossWeb-->
+                 <exclude>org/jboss/test/ws/jaxws/jbws981/JBWS981TestCase.*</exclude>
+
+                 <!--# Seems MSFT interop. endpoints are down :(-->
+                 <exclude>org/jboss/test/ws/jaxws/cxf/interop/wstrust10/**</exclude>
+
+                 <!-- ////////////////////////// -->
+                 <!-- AS7 integration exclusions -->
+                 <!-- ////////////////////////// -->
+
+                 <!--# not yet supported on AS7 -->
+                 <exclude>org/jboss/test/ws/jaxrpc/**</exclude>
+                 <exclude>org/jboss/test/ws/jaxws/samples/securityDomain/**</exclude>
+                 <exclude>org/jboss/test/ws/jaxws/jbws944/**</exclude>
+                 <exclude>org/jboss/test/ws/jaxws/samples/webserviceref*/**</exclude>
+                 <exclude>org/jboss/test/ws/jaxws/endpointReference/**</exclude>
+                 <exclude>org/jboss/test/ws/jaxws/jaxbcust/**</exclude>
               </excludes>
             </configuration>
           </plugin>
